--- a/recbole_gnn/properties/overall.dev.yaml
+++ b/recbole_gnn/properties/overall.dev.yaml
@@ -1,3 +1,5 @@
 gpu_id: '0'                     # (str) The id of GPU device(s).
 worker: 0                       # (int) The number of workers processing the data.
 epochs: 1                     # (int) The number of training epochs.
+topk: [2]
+valid_metric: NDCG@2            # (str) The evaluation metric for early stopping.
