--- a/recbole_gnn/properties/overall.dev.yaml
+++ b/recbole_gnn/properties/overall.dev.yaml
@@ -1,5 +1,6 @@
-gpu_id: '0'                     # (str) The id of GPU device(s).
+gpu_id: '0,1,2'                     # (str) The id of GPU device(s).
 worker: 0                       # (int) The number of workers processing the data.
 epochs: 1                     # (int) The number of training epochs.
 topk: [2]
 valid_metric: NDCG@2            # (str) The evaluation metric for early stopping.
+data_path: '/home/sh2/S3629862/projects/mine/RecBole/dataset/'           # (str) The path of input dataset.
