--- a/recbole_gnn/properties/overall.dev.yaml
+++ b/recbole_gnn/properties/overall.dev.yaml
@@ -2,6 +2,7 @@ epochs: 1                     # (int) The number of training epochs.
 topk: [1, 2, 3]
 valid_metric: NDCG@2            # (str) The evaluation metric for early stopping.
 use_gpu: True                   # (bool) Whether or not to use GPU.
-worker: 0
+worker: 1                       # (int) The number of workers for loading data.
 train_batch_size: 3          # (int) The training batch size.
+enable_sparse: True            # (bool) Whether to enable sparse optimization.
 #data_path: '/home/sh2/S3629862/projects/mine/RecBole/dataset/'           # (str) The path of input dataset.
